# DetectiPublic

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
component/gdinoonnx/: Dockerfile  README.md  pyproject.toml
component/gdinoonnx/src/: boot.sh  build.py  build_gdino.sh  resolve_checkpoint.py  runtime_patch.py  upstream_paths.txt
component/vision/: .dockerignore  Dockerfile  README.md  pyproject.toml
component/vision/src/: service.py
component/vision/src/processor/: angle.py  depth.py  grounding_dino.py
component/vision/src/templates/: camera.html  debug.html
docs/: VISION_API_COMMUNICATION_SCHEMA.md  VISION_API_SCHEMA_1_RUNTIME_OVERVIEW.mmd  VISION_API_SCHEMA_2_STREAM_DETECTION_FLOW.mmd  VISION_API_SCHEMA_3_CAMERA_CAPTURE_FLOW.mmd  VISION_API_SCHEMA_4_APPLY_AND_TEMP_OUTPUTS.mmd
environ/: README.md  gdinoonnx.env.example  vision.env.example
