[project]
name = "vision"
version = "0.1.0"
description = "FastAPI vision service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "python-multipart>=0.0.20",
    "timm==0.6.12",
    "torch==2.10.0+cu126",
    "torchvision==0.25.0+cu126",
    "transformers>=5.1.0",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
tensorrt = [
    "tensorrt==10.16.0.72",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
